# ticket-monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  app.py  config.example.yaml  dedupe_history.command  launch_mac.command  launch_windows.bat  monitor.py  pyproject.toml  requirements.txt  setup_mac.command  setup_windows.bat  test_notifications.command
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: auto-merge.yml  deploy.yml  monitor.yml
README.md/: 🎫 Ticket Monitor.md
deploy/: setup.sh  setup_macos.sh
installers/: dedupe_history.command  launch_mac.command  launch_windows.bat  setup_mac.command  setup_windows.bat  test_notifications.command
scripts/: __init__.py  browser_host.sh  check_ci.sh  check_public_safety.py  dedupe_history.py  gen_changelog.py  guardian.py  install_desktop_shortcuts.sh  install_hooks.sh  monitorctl.sh  reloader.py  repair_uptime_ledger.py  setup_selfheal_reboot.sh
src/: _version.py  browser_probe.py  config.py  detector.py  egress.py  history_stats.py  models.py  notifier.py  preferences.py  scheduler.py  session_autofix.py  state.py  uptime.py  variation_probe.py
tests/: test_app_config.py  test_browser_probe.py  test_config.py  test_config_golden.py  test_detector.py  test_egress.py  test_gen_changelog.py  test_guardian.py  test_history_stats.py  test_monitor_cli.py  test_notifier.py  test_preferences.py  test_public_safety.py  test_reloader.py  test_repair_uptime_ledger.py  test_scheduler.py  test_session_autofix.py  test_state.py  test_uptime.py  test_variation_probe.py
(+5 files in other folders)
